--- a/README.mdx
+++ b/README.mdx
@@ -8,7 +8,7 @@ Click on `Use this template` to copy the Mintlify starter kit. The starter kit c
 - API Reference pages
 - Use of popular components
 
-### ð©âð» Development
+### Development
 
 Install the [Mintlify CLI](https://www.npmjs.com/package/mintlify) to preview
 the documentation changes locally. To install, use the following command
@@ -23,7 +23,7 @@ Run the following command at the root of your documentation (where mint.json is)
 mintlify dev
 ```
 
-### ð Publishing Changes
+### Publishing Changes
 
 Changes will be deployed to production automatically after pushing to the
 default branch.
@@ -33,5 +33,5 @@ docs.
 
 #### Troubleshooting
 
-- Mintlify dev isn't running - Run `mintlify install` to re-install dependencies.
-- Page loads as a 404 - Make sure you are running in a folder with `mint.json`
+- Mintlify dev isn't running - run `mintlify install` to reinstall dependencies.
+- Page loads as a 404 - make sure you are running in a folder with `mint.json`
