--- a/_snippets/faq-snippet.mdx
+++ b/_snippets/faq-snippet.mdx
@@ -1,77 +1,77 @@
 ## What is Upstash Redis?
 
-Upstash is a serverless database service compatible with RedisÂ® API.
+Upstash is a serverless database service compatible with RedisÃÂ® API.
 
-## What Does Serverless Database Mean?
+## What Does a Serverless Database Mean?
 
 You do not have to manage and provision servers. You do not deal with
 configuring or maintaining any server. You just use the service and pay what you
 use. If you are not using it, you should not be paying.
 
-## What are the use cases?
+## What Are the Use Cases?
 
-Upstash works for all the common use cases for RedisÂ®. You can use Upstash in
+Upstash works for all the common use cases for RedisÃÂ®. You can use Upstash in
 your serverless stack. In addition, you can use Upstash as storage (or caching)
 for your serverless functions. See Use Cases for more.
 
-## Do you support all RedisÂ® API?
+## Do You Support All RedisÃÂ® APIs?
 
-Most of them. See RedisÂ® API Compatibility for the list of supported commands.
+Most of them. See RedisÃÂ® API Compatibility for the list of supported commands.
 
-## Can I use any Redis client?
+## Can I Use Any Redis Client?
 
 Yes, Upstash is compatible with the Redis client protocol.
 
-## Which cloud providers do you support?
+## Which Cloud Providers Do You Support?
 
 Initially, we have AWS and GCP. Digital Ocean is planned.
 
-## Which regions do you support in AWS?
+## Which Regions Do You Support in AWS?
 
 We start with AWS-US-EAST-1 (Virginia), GCP-US-CENTRAL-1 (IOWA), AWS-US-WEST-1
 (N. California), AWS-EU-WEST-1 (Ireland), AWS-APN-NE-1 (Japan). We will add new
 regions soon. You can expedite this by telling us your use case and the region
 you need by emailing to feedback@upstash.com
 
-## Should my client be hosted in the AWS to use Upstash?
+## Should My Client Be Hosted in AWS to Use Upstash?
 
 No. Your client can be anywhere but the clients in AWS regions will give you
 better performance.
 
-## How do you compare Upstash with ElastiCache?
+## How Do You Compare Upstash With ElastiCache?
 
 Upstash is serverless. With ElastiCache, you pay even if you do not use the
 database. See Compare for more info.
 
-## How do you compare Upstash with Redis Labs or Compose.io?
+## How Do You Compare Upstash With Redis Labs or Compose.io?
 
 Upstash is serverless. With Redis Labs or Compose.io, you always pay a lot when
 your data size is big but your traffic is low. In Upstash, the pricing is based
 on per request. See Compare for more info.
 
-## Do you persist data?
+## Do You Persist Data?
 
 Yes, by default, we write data to the disk. So, in case of a failure, you should
 not lose any data.
 
-## Do you support Redis Cluster?
+## Do You Support Redis Cluster?
 
 We support replication in the Premium type database. We do not support sharding yet.
 
-## I have database with 10GB data, I pay nothing if I do not use it. Is that correct?
+## I Have a Database With 10GB of Data, I Pay Nothing If I Do Not Use It. Is That Correct?
 
 You only pay for the disk storage cost, which is $0.25 per GB. For your case, you
 will pay $2.5 monthly.
 
-## What happens when I exceed the request limit on Free Database (10.000 requests per day)?
+## What Happens When I Exceed the Request Limit on Free Database (10,000 Requests per Day)?
 
 The exceeding commands return an exception.
 
-## When I upgrade my free database, do I lose data?
+## When I Upgrade My Free Database, Do I Lose Data?
 
 You do not lose data, but clients may disconnect and reconnect.
 
-## Upstash is much cheaper than Elasticache and Redis Labs for big data sizes (> 10GB). How is that possible?
+## Upstash Is Much Cheaper Than ElastiCache and Redis Labs for Big Data Sizes (> 10GB). How Is That Possible?
 
 Upstash's storage layer is multi-tiered. We keep your data in both memory and
 block storage (disk). The entries that are not accessed frequently are removed
@@ -79,12 +79,12 @@ from the memory but stored on disk. The latency overhead of idle entries is limi
 thanks to the SSD-based storage. Multi-tiered storage allows us to provide more
 flexible pricing.
 
-## Will my data be safe?
+## Will My Data Be Safe?
 
 Upstash is a GDPR compliant company. We do not share any user data with third
 parties. See our Legal Documents for more information.
 
-## How do you handle the noisy neighbour problem? Do other tenants affect my database?
+## How Do You Handle the Noisy Neighbor Problem? Do Other Tenants Affect My Database?
 
 Databases are isolated in some aspects but still share some hardware resources
 such as CPU or network. To avoid the noisy neighbor influence on these resources,
