--- a/README.mdx
+++ b/README.mdx
@@ -1,6 +1,6 @@
 # Mintlify Starter Kit
 
-Click on `Use this template` to copy the Mintlify starter kit. The starter kit includes examples such as
+Click on `Use this template` to copy the Mintlify starter kit. The starter kit contains examples including
 
 - Guide pages
 - Navigation
@@ -8,27 +8,30 @@ Click on `Use this template` to copy the Mintlify starter kit. The starter kit i
 - API Reference pages
 - Use of popular components
 
-### Ã°ÂÂÂ©Ã¢ÂÂÃ°ÂÂÂ» Development
+### Development
 
-Install the [Mintlify CLI](https://www.npmjs.com/package/mintlify) to preview the documentation changes locally. To install, use the following command
+Install the [Mintlify CLI](https://www.npmjs.com/package/mintlify) to preview
+the documentation changes locally. To install, use the following command
 
 ```
 npm i -g mintlify
 ```
 
-Run the following command at the root of your documentation (where `mint.json` is located)
+Run the following command at the root of your documentation (where mint.json is)
 
 ```
 mintlify dev
 ```
 
-### Ã°ÂÂÂ Publishing Changes
+### Publishing Changes
 
-Changes will be automatically deployed to production after pushing to the default branch.
+Changes will be deployed to production automatically after pushing to the
+default branch.
 
-You can also preview changes using PRs, which generate a preview link of the docs.
+You can also preview changes using PRs, which generates a preview link of the
+docs.
 
 #### Troubleshooting
 
-- If Mintlify dev isn't running, run `mintlify install` to reinstall dependencies.
-- If the page loads as a 404, make sure you are running it in a folder with `mint.json`.
+- Mintlify dev isn't running - run `mintlify install` to reinstall dependencies.
+- Page loads as a 404 - make sure you are running in a folder with `mint.json`
