--- a/_snippets/faq-snippet.mdx
+++ b/_snippets/faq-snippet.mdx
@@ -58,7 +58,7 @@ not lose any data.
 
 We support replication in the Premium type database. We do not support sharding yet.
 
-## I Have a Database With 10GB of Data, I Pay Nothing If I Do Not Use It. Is That Correct?
+## I Have a Database With 10GB Data, I Pay Nothing If I Do Not Use It. Is That Correct?
 
 You only pay for the disk storage cost, which is $0.25 per GB. For your case, you
 will pay $2.5 monthly.
@@ -84,7 +84,7 @@ flexible pricing.
 Upstash is a GDPR compliant company. We do not share any user data with third
 parties. See our Legal Documents for more information.
 
-## How Do You Handle the Noisy Neighbor Problem? Do Other Tenants Affect My Database?
+## How Do You Handle the Noisy Neighbour Problem? Do Other Tenants Affect My Database?
 
 Databases are isolated in some aspects but still share some hardware resources
 such as CPU or network. To avoid the noisy neighbor influence on these resources,
