--- a/_snippets/faq-snippet.mdx
+++ b/_snippets/faq-snippet.mdx
@@ -38,12 +38,12 @@ you need by emailing to feedback@upstash.com
 No. Your client can be anywhere but the clients in AWS regions will give you
 better performance.
 
-## How Do You Compare Upstash with ElastiCache?
+## How Do You Compare Upstash With ElastiCache?
 
 Upstash is serverless. With ElastiCache, you pay even if you do not use the
 database. See Compare for more info.
 
-## How Do You Compare Upstash with Redis Labs or Compose.io?
+## How Do You Compare Upstash With Redis Labs or Compose.io?
 
 Upstash is serverless. With Redis Labs or Compose.io, you always pay a lot when
 your data size is big but your traffic is low. In Upstash, the pricing is based
@@ -58,12 +58,12 @@ not lose any data.
 
 We support replication in the Premium type database. We do not support sharding yet.
 
-## I Have a Database with 10GB of Data, I Pay Nothing If I Do Not Use It. Is That Correct?
+## I Have a Database With 10GB of Data, I Pay Nothing If I Do Not Use It. Is That Correct?
 
 You only pay for the disk storage cost, which is $0.25 per GB. For your case, you
 will pay $2.5 monthly.
 
-## What Happens When I Exceed the Request Limit on Free Database (10,000 Requests per Day)?
+## What Happens When I Exceed the Request Limit on Free Database (10,000 Requests Per Day)?
 
 The exceeding commands return an exception.
 
