--- a/_snippets/faq-snippet.mdx
+++ b/_snippets/faq-snippet.mdx
@@ -1,77 +1,77 @@
 ## What is Upstash Redis?
 
-Upstash is a serverless database service compatible with RedisÃÂ® API.
+Upstash is a serverless database service compatible with RedisÂ® API.
 
-## What Does a Serverless Database Mean?
+## What Does Serverless Database Mean?
 
 You do not have to manage and provision servers. You do not deal with
 configuring or maintaining any server. You just use the service and pay what you
 use. If you are not using it, you should not be paying.
 
-## What Are the Use Cases?
+## What are the use cases?
 
-Upstash works for all the common use cases for RedisÃÂ®. You can use Upstash in
+Upstash works for all the common use cases for RedisÂ®. You can use Upstash in
 your serverless stack. In addition, you can use Upstash as storage (or caching)
 for your serverless functions. See Use Cases for more.
 
-## Do You Support All RedisÃÂ® APIs?
+## Do you support all RedisÃÂ® API?
 
-Most of them. See RedisÃÂ® API Compatibility for the list of supported commands.
+Most of them. See RedisÂ® API Compatibility for the list of supported commands.
 
-## Can I Use Any Redis Client?
+## Can I use any Redis client?
 
 Yes, Upstash is compatible with the Redis client protocol.
 
-## Which Cloud Providers Do You Support?
+## Which cloud providers do you support?
 
-Initially, we have AWS and GCP. Digital Ocean is planned.
+Initially, we had AWS and GCP. Digital Ocean is planned.
 
-## Which Regions Do You Support in AWS?
+## Which regions do you support in AWS?
 
 We start with AWS-US-EAST-1 (Virginia), GCP-US-CENTRAL-1 (IOWA), AWS-US-WEST-1
 (N. California), AWS-EU-WEST-1 (Ireland), AWS-APN-NE-1 (Japan). We will add new
-regions soon. You can expedite this by telling us your use case and the region
+regions soon. You can expedite this by telling us your use case and the region you need
 you need by emailing to feedback@upstash.com
 
-## Should My Client Be Hosted in AWS to Use Upstash?
+## Should my client be hosted in the AWS to use Upstash?
 
-No. Your client can be anywhere but the clients in AWS regions will give you
+No. Your client can be anywhere, but clients in AWS regions will give you
 better performance.
 
-## How Do You Compare Upstash With ElastiCache?
+## How do you compare Upstash with ElastiCache?
 
-Upstash is serverless. With ElastiCache, you pay even if you do not use the
+Upstash is serverless. With ElastiCache, you pay even if you are not using the
 database. See Compare for more info.
 
-## How Do You Compare Upstash With Redis Labs or Compose.io?
+## How do you compare Upstash with Redis Labs or Compose.io?
 
 Upstash is serverless. With Redis Labs or Compose.io, you always pay a lot when
 your data size is big but your traffic is low. In Upstash, the pricing is based
 on per request. See Compare for more info.
 
-## Do You Persist Data?
+## Do you persist data?
 
-Yes, by default, we write data to the disk. So, in case of a failure, you should
+Yes, by default, we write data to the disk. So, in the event of a failure, you should
 not lose any data.
 
-## Do You Support Redis Cluster?
+## Do you support Redis Cluster?
 
-We support replication in the Premium type database. We do not support sharding yet.
+We support replication in the Premium type database but do not support sharding yet.
 
-## I Have a Database With 10GB of Data, I Pay Nothing If I Do Not Use It. Is That Correct?
+## I have database with 10GB data, I pay nothing if I do not use it. Is that correct?
 
-You only pay for the disk storage cost, which is $0.25 per GB. For your case, you
+You only pay for the disk storage cost, which is $0.25 per GB. In your case, you
 will pay $2.5 monthly.
 
-## What Happens When I Exceed the Request Limit on Free Database (10,000 Requests Per Day)?
+## What happens when I exceed the request limit on Free Database (10.000 requests per day)?
 
-The exceeding commands return an exception.
+Exceeding commands return an exception.
 
-## When I Upgrade My Free Database, Do I Lose Data?
+## When I upgrade my free database, do I lose data?
 
-You do not lose data, but clients may disconnect and reconnect.
+You do not lose data, but clients may disconnect and then reconnect.
 
-## Upstash Is Much Cheaper Than ElastiCache and Redis Labs for Big Data Sizes (> 10GB). How Is That Possible?
+## Upstash is much cheaper than Elasticache and Redis Labs for big data sizes (> 10GB). How is that possible?
 
 Upstash's storage layer is multi-tiered. We keep your data in both memory and
 block storage (disk). The entries that are not accessed frequently are removed
@@ -79,12 +79,12 @@ from the memory but stored on disk. The latency overhead of idle entries is limi
 thanks to the SSD-based storage. Multi-tiered storage allows us to provide more
 flexible pricing.
 
-## Will My Data Be Safe?
+## Will my data be safe?
 
-Upstash is a GDPR compliant company. We do not share any user data with third
+Upstash is a GDPR-compliant company. We do not share any user data with third
 parties. See our Legal Documents for more information.
 
-## How Do You Handle the Noisy Neighbor Problem? Do Other Tenants Affect My Database?
+## How do you handle the noisy neighbour problem? Do other tenants affect my database?
 
 Databases are isolated in some aspects but still share some hardware resources
 such as CPU or network. To avoid the noisy neighbor influence on these resources,
@@ -93,6 +93,6 @@ they are throttled using a backoff strategy. When multiple databases sharing the
 same hardware are close to the limits, our system can add new resources to the
 pool and/or migrate some of the databases to distribute the load.
 
-Also, if a database exceeds its quotas very frequently, we notify users about
+Also, if a database frequently exceeds its quotas, we notify users about
 whether they want to upgrade to an upper plan. Databases in pro plans are placed
 either on dedicated or more isolated hardware due to higher resource needs.
