--- a/redis/howto/datadog.mdx
+++ b/redis/howto/datadog.mdx
@@ -17,13 +17,13 @@ This guide will walk you through the steps to seamlessly connect your Datadog ac
 
 ![integration-tab.png](/img/datadog/integration-tab.png)
 
-Let’s click on the "Install" button to add Upstash to your Datadog account.
+Let's click on the "Install" button to add Upstash to your Datadog account.
 
 ![installation.png](/img/datadog/installation.png)
 
 ## **Step 3: Connect Accounts**
 
-After installing Upstash, click on the "Connect Accounts" button and Datadog will redirect you to the Upstash site for account integration.
+After installing Upstash, click on the "Connect Accounts" button, and Datadog will redirect you to the Upstash site for account integration.
 
 ![connect-acc.png](/img/datadog/connect-acc.png)
 
@@ -32,11 +32,11 @@ After installing Upstash, click on the "Connect Accounts" button and Datadog wil
 1. On the Upstash site, you will be prompted to select the Datadog account you want to integrate.
 2. Choose the appropriate Datadog account from the list.
 
-Upstash Datadog Integration allows you to integrate personal and team based accounts.
+Upstash Datadog Integration allows you to integrate personal and team-based accounts.
 
-**Caveats;**
+**Caveats:**
 
-- This integration can only be executed only one time.If you would like to extend list of the team in integration please re-establish the integration from scratch.
+- This integration can only be executed one time. If you would like to extend the list of the team in the integration, please re-establish the integration from scratch.
 
 ![personal.png](/img/datadog/personal.png)
 
@@ -44,24 +44,23 @@ Upstash Datadog Integration allows you to integrate personal and team based acco
 
 ## **Step 5: Wait for Metrics Availability**
 
-Once you've selected your Datadog account, Upstash will begin the integration process and please be patient while the metrics are being retrieved. This may take a few moments.
+Once you've selected your Datadog account, Upstash will begin the integration process. Please be patient while the metrics are being retrieved. This may take a few moments.
 
-And here we go, metrics will be available in Upstash Overview Dashboard !
+And here we go, metrics will be available in the Upstash Overview Dashboard!
 
 ![upstash-dashboard.png](/img/datadog/upstash-dashboard.png)
 
 ## **Step 6: Datadog Integration Removal Process**
 
-Navigate to Integration Tab on your Datadog account,
+Navigate to the Integration Tab on your Datadog account.
 
-Once logged in, navigate to the "Integration" tab and continue with Datadog part. If you would like to remove your integration between Upstash and Datadog account press "Remove".
+Once logged in, navigate to the "Integration" tab and continue with the Datadog part. If you would like to remove your integration between Upstash and your Datadog account, press "Remove".
 
 ### Confirm Removal:
 
-Upstash will suspend all metric publishing process after the you remove Datadog Integration.
+Upstash will suspend all metric publishing processes after you remove the Datadog integration.
 
 After removing the integration on the Upstash side, it's crucial to go to your Datadog account and remove any related API keys or configurations associated with the integration.
-
 
 ## Pricing
 
