--- a/redis/howto/upgradedatabase.mdx
+++ b/redis/howto/upgradedatabase.mdx
@@ -2,14 +2,14 @@
 title: Upgrade Your Database
 ---
 
-Free tier has followings restrictions:
+The free tier has the following restrictions:
 
-- Max 10.000 requests per day
+- Max 10,000 requests per day
 - Max 256 MB data size
 - Max 1 database
 
 If you think your database is close to reaching any of these limits, we
-recommend you to upgrade to pay-as-you-go plan which includes:
+recommend that you upgrade to the pay-as-you-go plan, which includes:
 
 - No limit on requests per day
 - Data size up to 10 GB
@@ -19,14 +19,14 @@ payment method as described [here](/common/account/addapaymentmethod). After you
 a payment method, Upstash restarts your database and your new database starts
 with the pay-as-you-go plan.
 
-See the [quotas](https://upstash.com/pricing/redis) for limits of the
-pay-as-you-go plan. If you think, your use case will exceed those quotas,
-contact us (support@upstash.com) for our [Enterprise Plan](#enterprise-plan)
+See the [quotas](https://upstash.com/pricing/redis) for the limits of the
+pay-as-you-go plan. If you think your use case will exceed those quotas,
+contact us at support@upstash.com for our [Enterprise Plan](#enterprise-plan)
 where you can customize the limits.
 
 <Note>
-  During the upgrade process, you will not lose any data but your database will
-  experience a downtime about 1-2 seconds. Your existing clients will be
-  disconnected. So it is recommended to upgrade your database when there is the
-  least activity.
+  During the upgrade process, you will not lose any data, but your database will
+  experience downtime of about 1-2 seconds. Your existing clients will be
+  disconnected. Therefore, it is recommended to upgrade your database when there is the
+ least activity.
 </Note>
