--- a/redis/howto/monitoryourusage.mdx
+++ b/redis/howto/monitoryourusage.mdx
@@ -6,7 +6,7 @@ We support the Redis `MONITOR` command, a debugging command that allows you to s
 
 ## Monitoring Your Usage - Video Guide
 
-In this video, we'll walk through setting up a monitor instance step-by-step.
+In this video, we'll walk through setting up a monitor instance step by step.
 
 <Frame>
   <iframe
@@ -21,10 +21,10 @@ In this video, we'll walk through setting up a monitor instance step-by-step.
 </Frame>
 
 <Note>
-  The `MONITOR`command expects a persistent connection and, therefore, does not work over HTTP. 
+  The `MONITOR` command expects a persistent connection and, therefore, does not work over HTTP. 
 </Note>
 
-In this video, we use `ioredis` to connect to our Upstash Redis database. Using an event handler, we can define what should happen for each executed command against on Redis instance. For example, logging all data to the console.
+In this video, we use `ioredis` to connect to our Upstash Redis database. Using an event handler, we can define what should happen for each executed command against our Redis instance. For example, logging all data to the console.
 
 
 <RequestExample>
