--- a/redis/howto/importexport.mdx
+++ b/redis/howto/importexport.mdx
@@ -2,19 +2,19 @@
 title: Import/Export Data
 ---
 
-## Using Upstash Console
+## Using the Upstash Console
 
 You can use the migration wizard in the
-[Upstash console](https://console.upstash.com) to import your Redis to Upstash.
-In the database list page, click on the `Import` button, you will see the dialog
-like below:
+[Upstash console](https://console.upstash.com) to import your Redis data into Upstash.
+On the database list page, click on the `Import` button, and you will see a dialog
+like the one below:
 
     <Frame>
         <img src="/img/import/import.png"   width="60%" />
     </Frame>
 
-You can move your data from either an Upstash database or a database in another
-provider (or on premise).
+You can move your data from either another Upstash database or a database from another
+provider (or on-premise).
 
 <Info>
   All the data will be deleted (flushed) in the destination database before the
@@ -25,14 +25,14 @@ provider (or on premise).
 
 You can also use the
 [upstash-redis-dump](https://github.com/upstash/upstash-redis-dump) tool
-import/export data from another Redis.
+to import/export data from another Redis.
 
-The below is an example how to dump and import data:
+Below is an example of how to dump and import data:
 
 ```shell
 $ upstash-redis-dump -db 0 -host eu1-moving-loon-6379.upstash.io -port 6379 -pass PASSWORD -tls > redis.dump
 Database 0: 9 keys dumped
 ```
 
-See [upstash-redis-dump repo](https://github.com/upstash/upstash-redis-dump) for
+See the [upstash-redis-dump repo](https://github.com/upstash/upstash-redis-dump) for
 more information.
