--- a/redis/help/sla.mdx
+++ b/redis/help/sla.mdx
@@ -2,22 +2,13 @@
 title: Uptime SLA
 ---
 
-This Service Level Agreement ("SLA") applies to the use of the Upstash services,
-offered under the terms of our Terms of Service or other agreement with us
-governing your use of Upstash. This SLA does not apply to Upstash services in
-the Upstash Free Tier. It is clarified that this SLA is subject to the terms of
-the Agreement, and does not derogate therefrom (capitalized terms, unless
-otherwise indicated herein, have the meaning specified in the Agreement).
-Upstash reserves the right to change the terms of this SLA by publishing updated
-terms on its website, such change to be effective as of the date of publication.
+This Service Level Agreement ("SLA") applies to the use of the Upstash services offered under the terms of our Terms of Service or another agreement with us governing your use of Upstash. This SLA does not apply to Upstash services in the Upstash Free Tier. It is clarified that this SLA is subject to the terms of the Agreement, and does not derogate from them (capitalized terms, unless otherwise indicated herein, have the meaning specified in the Agreement). Upstash reserves the right to change the terms of this SLA by publishing updated terms on its website, such changes to be effective as of the date of publication.
 
 ### Regional and Global Database SLA
 
-Upstash will use commercially reasonable efforts to make regional and global
-databases available with a Monthly Uptime Percentage of at least 99.99%.
+Upstash will use commercially reasonable efforts to make regional and global databases available with a Monthly Uptime Percentage of at least 99.99%.
 
-In the event any of the services do not meet the SLA, you will be eligible to
-receive a Service Credit as described below.
+In the event that any of the services do not meet the SLA, you will be eligible to receive a Service Credit as described below.
 
 | Monthly Uptime Percentage                           | Service Credit Percentage |
 | --------------------------------------------------- | ------------------------- |
@@ -27,21 +18,10 @@ receive a Service Credit as described below.
 
 ### SLA Credits
 
-Service Credits are calculated as a percentage of the monthly bill (excluding
-one-time payments such as upfront payments) for the service in the affected
-region that did not meet the SLA.
+Service Credits are calculated as a percentage of the monthly bill (excluding one-time payments such as upfront payments) for the service in the affected region that did not meet the SLA.
 
-Uptime percentages are recorded and published in the
-[Upstash Status Page](https://status.upstash.com).
+Uptime percentages are recorded and published on the [Upstash Status Page](https://status.upstash.com).
 
-To receive a Service Credit, you should submit a claim by sending an email to
-[support@upstash.com](mailto:support@upstash.com). Your credit request should be
-received by us before the end of the second billing cycle after the incident
-occurred.
+To receive a Service Credit, you should submit a claim by sending an email to [support@upstash.com](mailto:support@upstash.com). Your credit request should be received by us before the end of the second billing cycle after the incident occurred.
 
-We will apply any service credits against future payments for the applicable
-services. At our discretion, we may issue the Service Credit to the credit card
-you used. Service Credits will not entitle you to any refund or other payment. A
-Service Credit will be applicable and issued only if the credit amount for the
-applicable monthly billing cycle is greater than one dollar ($1 USD). Service
-Credits may not be transferred or applied to any other account.
+We will apply any service credits against future payments for the applicable services. At our discretion, we may issue the Service Credit to the credit card you used. Service Credits will not entitle you to any refund or other payment. A Service Credit will be applicable and issued only if the credit amount for the applicable monthly billing cycle is greater than one dollar ($1 USD). Service Credits may not be transferred or applied to any other account.
